--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	<title>Document</title>
 </head>
 <body>
-	
+	<div class="div">
+		<a href="other/authorization.html" class="link">authorization</a>
+		<a href="other/registration.html" class="link">registration</a>
+		<a href="other/search.html" class="link">search</a>
+	</div>
 </body>
 </html>
