--- a/other/authorization.html
+++ b/other/authorization.html
@@ -9,8 +9,8 @@
 <body>
 	<div class="div">
 		<a href="../index.html" class="link">index</a>
-		<a href="other/registration.html" class="link">registration</a>
-		<a href="other/search.html" class="link">search</a>
+		<a href="registration.html" class="link">registration</a>
+		<a href="search.html" class="link">search</a>
 	</div>
 </body>
 </html>
