--- a/other/registration.html
+++ b/other/registration.html
@@ -12,5 +12,22 @@
 		<a href="authorization.html" class="link">authorization</a>
 		<a href="search.html" class="link">search</a>
 	</div>
+	<nav>
+		<form action="https://tests.fomenko.top/echo/index.php">
+				<div>
+					<label>email<input  type="email" name="email" placeholder="email"></label>
+				</div>
+				<div>
+					<label>password<input type="password" name="password" placeholder="password"></label>
+				</div>
+				<div>
+					<label>password confirmation<input  type="password" name="confirmation" placeholder="confirmation"></label>
+				</div>
+				<div>
+					<input type="submit">
+					<input type="reset">
+				</div>
+		</form>
+	</nav>
 </body>
 </html>
