--- a/other/registration.html
+++ b/other/registration.html
@@ -13,20 +13,23 @@
 		<a href="search.html" class="link">search</a>
 	</div>
 	<nav>
-		<form action="https://tests.fomenko.top/echo/index.php">
-				<div>
-					<label>email<input  type="email" name="email" placeholder="email"></label>
-				</div>
-				<div>
-					<label>password<input type="password" name="password" placeholder="password"></label>
-				</div>
-				<div>
-					<label>password confirmation<input  type="password" name="confirmation" placeholder="confirmation"></label>
-				</div>
-				<div>
-					<input type="submit">
-					<input type="reset">
-				</div>
+		<form action="https://tests.fomenko.top/echo/index.php" method="post">
+			<div>
+				<label for="111">email</label>
+				<input id="111" type="email" name="email" placeholder="email">
+			</div>
+			<div>
+				<label for="222">password</label>
+				<input id="222" type="password" name="password" placeholder="password">
+			</div>
+			<div>
+				<label for="333">password confirmation</label>
+				<input id="333" type="password" name="confirmation" placeholder="confirmation">
+			</div>
+			<div>
+				<input type="submit">
+				<input type="reset">
+			</div>
 		</form>
 	</nav>
 </body>
