--- a/other/registration.html
+++ b/other/registration.html
@@ -12,7 +12,6 @@
 		<a href="authorization.html" class="link">authorization</a>
 		<a href="search.html" class="link">search</a>
 	</div>
-	<nav>
 		<form action="https://tests.fomenko.top/echo/index.php" method="post">
 			<div>
 				<label for="111">email</label>
@@ -27,10 +26,8 @@
 				<input id="333" type="password" name="confirmation" placeholder="confirmation">
 			</div>
 			<div>
-				<input type="submit">
-				<input type="reset">
+				<button type="submit">registration</button>
 			</div>
 		</form>
-	</nav>
 </body>
 </html>
