--- a/other/authorization.html
+++ b/other/authorization.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,25 +13,22 @@
 		<a href="registration.html" class="link">registration</a>
 		<a href="search.html" class="link">search</a>
 	</div>
-	<div>
-			<form action="https://tests.fomenko.top/echo/index.php" method="post">
-				<div>
-					<label for="111">email</label>
-					<input id="111" type="email" name="email" placeholder="email">
-				</div>
-				<div>
-					<label for="222">password</label>
-					<input id="222" type="password" name="password" placeholder="password">
-				</div>
-				<div>
-					<label for="333">remember password</label>
-					<input id="333" type="checkbox" name="remember" placeholder="remember">
-				</div>
-				<div>
-					<button type="submit">authorization</button>
-				</div>
-			</form>
-		</nav>
-	</div>
+	<form action="https://tests.fomenko.top/echo/index.php" method="post">
+		<div>
+			<label for="111">email</label>
+			<input id="111" type="email" name="email" placeholder="email">
+		</div>
+		<div>
+			<label for="222">password</label>
+			<input id="222" type="password" name="password" placeholder="password">
+		</div>
+		<div>
+			<label for="333">remember password</label>
+			<input id="333" type="checkbox" name="remember">
+		</div>
+		<div>
+			<button type="submit">authorization</button>
+		</div>
+	</form>
 </body>
 </html>
