--- a/other/search.html
+++ b/other/search.html
@@ -12,5 +12,76 @@
 		<a href="authorization.html" class="link">authorization</a>
 		<a href="registration.html" class="link">registration</a>
 	</div>
+	<form action="https://tests.fomenko.top/echo/index.php" method="post">
+		<div>
+			<label for="115">Тип Кузова</label>
+			<select name="body__type" id="115">
+				<option>Хэтчбек</option>
+				<option>Лифтбек</option>
+				<option>Лимузин</option>
+			</select>
+		</div>
+		<div>
+			<label for="114">Марка Автомобиля</label>
+			<select name=" car model" id="114">
+				<option>Audi</option>
+				<option>Acura</option>
+				<option>Alfa Romeo</option>
+			</select>
+		</div>
+		<div>
+			<label for="113">Страна производитель</label>
+			<select name="producing__country" id="113">
+				<option>Китай</option>
+				<option>США</option>
+				<option>Япония</option>
+			</select>
+		</div>
+		<div>
+			<label for="666">Комфорт</label>
+			<select name="comfort" id="666">
+				<option>Люкс</option>
+				<option>Кожаный салон</option>
+			</select>
+		</div>
+		<div>
+			<label for="777">Тип коробки передач</label>
+			<select name="gearbox__type" id="777">
+				<option>Механика</option>
+				<option>Автомат</option>
+			</select>
+		</div>
+		<div>
+			<label for="888">Состояние</label>
+			<select name="condition" id="888" multiple>
+				<option>Битая</option>
+				<option>В кредите</option>
+				<option>Нерастаможенная</option>
+			</select>
+		</div>
+		<div>
+			<label for="000">цена от</label>
+			<select name="max prais" id="000">
+				<option>1</option>
+				<option>2</option>
+				<option>3</option>
+				<option>4</option>
+				<option>5</option>
+				<option>6</option>
+			</select>
+		</div>
+		<div>
+			<label for="999">цена до</label>
+			<select name="min prais" id="999">
+				<option>2</option>
+				<option>3</option>
+				<option>4</option>
+				<option>5</option>
+				<option>6</option>
+				<option>6</option>
+			</select>
+		</div>
+		<button type="submit">search</button>
+	</form>
 </body>
 </html>
