--- a/other/authorization.html
+++ b/other/authorization.html
@@ -15,19 +15,19 @@
 	</div>
 	<form action="https://tests.fomenko.top/echo/index.php" method="post">
 		<div>
-			<label for="111">email</label>
-			<input id="111" type="email" name="email" placeholder="email">
+			<label for="email">email</label>
+			<input id="email" type="email" name="email" placeholder="email">
 		</div>
 		<div>
-			<label for="222">password</label>
-			<input id="222" type="password" name="password" placeholder="password">
+			<label for="password">password</label>
+			<input id="password" type="password" name="password" placeholder="password">
 		</div>
 		<div>
-			<label for="333">remember password</label>
-			<input id="333" type="checkbox" name="remember">
+			<label for="checkbox">remember password</label>
+			<input id="checkbox" type="checkbox" name="remember">
 		</div>
 		<div>
-			<button type="submit">authorization</button>
+			<input type="submit" name="authorization">
 		</div>
 	</form>
 </body>
