--- a/other/search.html
+++ b/other/search.html
@@ -14,54 +14,54 @@
 	</div>
 	<form action="https://tests.fomenko.top/echo/index.php" method="post">
 		<div>
-			<label for="115">Тип Кузова</label>
-			<select name="body__type" id="115">
+			<label for="body">Тип Кузова</label>
+			<select name="body__type" id="body">
 				<option>Хэтчбек</option>
 				<option>Лифтбек</option>
 				<option>Лимузин</option>
 			</select>
 		</div>
 		<div>
-			<label for="114">Марка Автомобиля</label>
-			<select name=" car model" id="114">
+			<label for="model">Марка Автомобиля</label>
+			<select name="car model" id="model">
 				<option>Audi</option>
 				<option>Acura</option>
 				<option>Alfa Romeo</option>
 			</select>
 		</div>
 		<div>
-			<label for="113">Страна производитель</label>
-			<select name="producing__country" id="113">
+			<label for="producing">Страна производитель</label>
+			<select name="producing__country" id="producing">
 				<option>Китай</option>
 				<option>США</option>
 				<option>Япония</option>
 			</select>
 		</div>
 		<div>
-			<label for="666">Комфорт</label>
-			<select name="comfort" id="666">
+			<label for="comfort">Комфорт</label>
+			<select name="comfort" id="comfort">
 				<option>Люкс</option>
 				<option>Кожаный салон</option>
 			</select>
 		</div>
 		<div>
-			<label for="777">Тип коробки передач</label>
-			<select name="gearbox__type" id="777">
+			<label for="gearbox">Тип коробки передач</label>
+			<select name="gearbox__type" id="gearbox">
 				<option>Механика</option>
 				<option>Автомат</option>
 			</select>
 		</div>
 		<div>
-			<label for="888">Состояние</label>
-			<select name="condition" id="888" multiple>
+			<label for="condition">Состояние</label>
+			<select name="condition" id="condition" multiple>
 				<option>Битая</option>
 				<option>В кредите</option>
 				<option>Нерастаможенная</option>
 			</select>
 		</div>
 		<div>
-			<label for="000">цена от</label>
-			<select name="max prais" id="000">
+			<label for="max">цена от</label>
+			<select name="max prais" id="max">
 				<option>1</option>
 				<option>2</option>
 				<option>3</option>
@@ -71,8 +71,8 @@
 			</select>
 		</div>
 		<div>
-			<label for="999">цена до</label>
-			<select name="min prais" id="999">
+			<label for="min">цена до</label>
+			<select name="min prais" id="min">
 				<option>2</option>
 				<option>3</option>
 				<option>4</option>
@@ -81,7 +81,7 @@
 				<option>6</option>
 			</select>
 		</div>
-		<button type="submit">search</button>
+		<input type="submit" name="search">
 	</form>
 </body>
 </html>
