--- a/other/registration.html
+++ b/other/registration.html
@@ -15,18 +15,20 @@
 	</div>
 	<form action="https://tests.fomenko.top/echo/index.php" method="post">
 		<div>
-			<label for="111">email</label>
-			<input id="111" type="email" name="email" placeholder="email">
+			<label for="email">email</label>
+			<input id="email" type="email" name="email" placeholder="email">
 		</div>
 		<div>
-			<label for="222">password</label>
-			<input id="222" type="password" name="password" placeholder="password">
+			<label for="password">password</label>
+			<input id="password" type="password" name="password" placeholder="password">
 		</div>
 		<div>
-			<label for="333">password confirmation</label>
-			<input id="333" type="password" name="confirmation" placeholder="confirmation">
+			<label for="confirmation">password confirmation</label>
+			<input id="confirmation" type="password" name="confirmation" placeholder="confirmation">
 		</div>
-			<button type="submit">registration</button>
+		<div>
+			<input type="submit" name="registration">
+		</div>
 	</form>
 </body>
 </html>
